<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/application">
        <Preference
            android:key="appInfo" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_shield_24"
            android:key="enableIntervention"
            app:singleLineTitle="false"
            android:title="@string/app_enable_intervention"
            android:summary="@string/app_enable_intervention_desc" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_shield_24"
            android:key="enableLogger"
            android:dependency="enableIntervention"
            app:singleLineTitle="false"
            android:title="@string/app_rewrite_integrity_response"
            android:summary="@string/app_rewrite_integrity_response_desc" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_info_24"
            android:key="integrityRequestAlert"
            app:singleLineTitle="false"
            android:title="@string/app_integrity_request_alert"
            android:summary="@string/app_integrity_request_alert_desc" />
        <ListPreference
            android:icon="@drawable/outline_info_24"
            android:key="requestAlertStyle"
            android:dependency="integrityRequestAlert"
            android:entries="@array/request_alert_style_entries"
            android:entryValues="@array/request_alert_style_values"
            android:summary="%s"
            app:singleLineTitle="false"
            android:title="@string/request_alert_style" />
        <Preference
            android:icon="@drawable/outline_settings_backup_restore_24"
            android:key="resetToDefaults"
            app:singleLineTitle="false"
            android:title="@string/app_reset_to_defaults"
            android:summary="@string/app_reset_to_defaults_desc" />
    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="enableLogger"
        android:title="@string/preferences">
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_bug_report_24"
            android:key="deliverSyntheticResponse"
            android:dependency="enableLogger"
            app:singleLineTitle="false"
            android:title="@string/app_deliver_synthetic_response"
            android:summary="@string/app_deliver_synthetic_response_desc" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_bug_report_24"
            android:key="delaySyntheticResponseDelivery"
            android:dependency="deliverSyntheticResponse"
            app:singleLineTitle="false"
            android:title="@string/app_delay_synthetic_response"
            android:summary="@string/app_delay_synthetic_response_desc" />
        <EditTextPreference
            android:icon="@drawable/outline_bug_report_24"
            android:key="rewriteIntegrityErrorCode"
            android:dependency="enableLogger"
            app:singleLineTitle="false"
            app:useSimpleSummaryProvider="true"
            android:title="@string/app_rewrite_integrity_error_code"
            android:dialogMessage="@string/app_rewrite_integrity_error_code_desc" />
        <Preference
            android:icon="@drawable/outline_bug_report_24"
            android:key="rewriteIntegrityErrorCodeReference"
            android:dependency="enableLogger"
            app:singleLineTitle="false"
            android:title="@string/app_rewrite_integrity_error_code_reference"
            android:summary="@string/app_rewrite_integrity_error_code_reference_desc" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_bug_report_24"
            android:key="rewriteIntegrityErrorRemediable"
            android:dependency="enableLogger"
            app:singleLineTitle="false"
            android:title="@string/app_rewrite_integrity_error_remediable"
            android:summary="@string/app_rewrite_integrity_error_remediable_desc" />
    </PreferenceCategory>
</PreferenceScreen>
