<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.frknkrc44.pib_oss.ui.fragment.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/nav_logs"
        android:name="icu.nullptr.playintegritybreak.ui.fragment.LogsFragment"
        android:label="@string/title_logs" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="icu.nullptr.playintegritybreak.ui.fragment.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="org.frknkrc44.pib_oss.ui.fragment.AboutFragment"
        android:label="@string/title_about" />

    <fragment
        android:id="@+id/nav_app_manage"
        android:name="icu.nullptr.playintegritybreak.ui.fragment.AppManageFragment"
        android:label="@string/title_app_manage" />

    <fragment
        android:id="@+id/nav_app_settings"
        android:name="org.frknkrc44.pib_oss.ui.fragment.AppSettingsV2Fragment"
        android:label="@string/title_app_settings">

        <argument
            android:name="packageName"
            app:argType="string" />

        <argument
            android:name="bulkConfig"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />

        <argument
            android:name="bulkConfigApps"
            app:argType="string[]"
            app:nullable="true"
            android:defaultValue="@null" />

        <argument
            android:name="bulkConfigMode"
            app:argType="boolean"
            android:defaultValue="false" />

    </fragment>

</navigation>
